Set perms. Set profile dir. Add example docker-compose.yml.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,7 +10,7 @@ redirect_stderr=true
 [program:app]
 priority=2
 environment=DISPLAY=":0"
-command=/usr/bin/firefox --display=:0
+command=/usr/bin/firefox --display=:0 --profile /config/profile
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
